FEAT: Add time off balance endpoint
